More work on veiw dynamic generation

--- a/Kafala.Web.UI/Views/Donor/View.cshtml
+++ b/Kafala.Web.UI/Views/Donor/View.cshtml
@@ -1,18 +1,3 @@
 ﻿@model Kafala.Web.ViewModels.Donor.ViewDonorViewModel
 
-@{
-    Layout = null;
-}
-
-<!DOCTYPE html>
-
-<html>
-    <head>
-        <title>title</title>
-    </head>
-    <body>
-        <div>
-              @Html.Bootstrap().DynamicForm(TODO)
-        </div>
-    </body>
-</html>
+    @Html.Bootstrap().DynamicView()
