--- a/Kafala.Web.UI/Views/Donor/Create.cshtml
+++ b/Kafala.Web.UI/Views/Donor/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Kafala.Web.ViewModels.Donor.DonorCreateViewModel
 
-
-@using (var form = Html.Bootstrap().BeginForm(BootstrapFormType.Horizontal, new {id = "autoForm" }))
+<h2>Register a new donor</h2>
+@using (var form = Html.Bootstrap().BeginForm(BootstrapFormType.Horizontal, new {@class= "well" ,id = "autoForm" }))
 {
     @Html.Bootstrap().DynamicForm(BootstrapFormType.Horizontal);
 }
