--- a/Kafala.Web.UI/Views/Donor/View.cshtml
+++ b/Kafala.Web.UI/Views/Donor/View.cshtml
@@ -1,3 +1,6 @@
 ﻿@model Kafala.Web.ViewModels.Donor.ViewDonorViewModel
-
-    @Html.Bootstrap().DynamicView()
+<h2>Donor Details</h2>
+@using (var form = Html.Bootstrap().BeginForm(BootstrapFormType.Horizontal, new {@class= "well" ,id = "autoForm" }))
+{
+    @Html.FormBuilder().DynamicView(BootstrapFormType.Horizontal);
+}
