Refactoring to form builder .. preparing for injection

--- a/Kafala.Web.UI/Views/Donor/View.cshtml
+++ b/Kafala.Web.UI/Views/Donor/View.cshtml
@@ -2,5 +2,6 @@
 <h2>Donor Details</h2>
 @using (var form = Html.Bootstrap().BeginForm(BootstrapFormType.Horizontal, new {@class= "well" ,id = "autoForm" }))
 {
-    @Html.FormBuilder().DynamicView(BootstrapFormType.Horizontal);
+    @Html.FormBuilder().DynamicView(Foundation.FormBuilder.DynamicForm.BootstrapFormType.Horizontal)
+    ;
 }
