--- a/Kafala.Web.UI/Views/Donor/Index.cshtml
+++ b/Kafala.Web.UI/Views/Donor/Index.cshtml
@@ -5,7 +5,7 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
+<h2>Donors</h2>
 
 <p>
     @Html.ActionLink("Create New", "Create")
@@ -21,6 +21,9 @@
         <th>
             JoinDate
         </th>
+        <th>
+            Status
+        </th>
         <th></th>
     </tr>
 
@@ -34,6 +37,9 @@
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.JoinDate)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.DonorStatus)
         </td>
         <td>
             @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
