--- a/Kafala.Web.UI/Views/Shared/_Layout.cshtml
+++ b/Kafala.Web.UI/Views/Shared/_Layout.cshtml
@@ -64,6 +64,8 @@
 <div class="container">
 <div class="row">
     <div class="col-lg-9">
+         @Html.RenderFlashMessages()
+                   
         @RenderBody()
     </div>
 </div>
