--- a/Kafala.Web.UI/Views/Shared/_LogIn_Layout.cshtml
+++ b/Kafala.Web.UI/Views/Shared/_LogIn_Layout.cshtml
@@ -20,7 +20,8 @@
 <body>
     
     <div class="container">
-        @Html.RenderFlashMessages();
+    @Html.RenderFlashMessages()
+         
         @RenderBody()
     </div>
      @Html.ScriptIncludeThirdParty("jquery-2.0.3.min.js")
