--- a/Kafala.Web.UI/Views/Commitment/Create.cshtml
+++ b/Kafala.Web.UI/Views/Commitment/Create.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Kafala.Web.ViewModels.Commitment.CreateCommitmentViewModel
 
-<h2>Associate Donor To Case</h2>
+<h2>Assign Case To Donor</h2>
 @using (var form = Html.Bootstrap().BeginForm(BootstrapFormType.Horizontal, new {@class= "well" ,id = "autoForm" }))
 {
     @Html.FormBuilder().DynamicForm();
