--- a/Kafala.Web.UI/Views/Donor/Partial/DonorCommitments.cshtml
+++ b/Kafala.Web.UI/Views/Donor/Partial/DonorCommitments.cshtml
@@ -4,7 +4,7 @@
 
  @if (Model.Commitments != null && Model.Commitments.Any())
  {
-     <table class="table-striped table-bordered table">
+     <table class="table table-condensed">
          <tr>
              <th>Case Name</th>
              <th>Start Date</th>
