--- a/Kafala.Web.UI/Views/Donor/Partial/DonorOutStanding.cshtml
+++ b/Kafala.Web.UI/Views/Donor/Partial/DonorOutStanding.cshtml
@@ -4,7 +4,7 @@
 
  @if (Model.OutStanding != null && Model.OutStanding.Any())
  {
-     <table class="table-striped table-bordered table">
+     <table class="table table-condensed">
          <tr>
              <th>Case Name</th>
              <th>For the Period</th>
