--- a/Kafala.Web.UI/Views/Shared/_Layout.cshtml
+++ b/Kafala.Web.UI/Views/Shared/_Layout.cshtml
@@ -16,14 +16,17 @@
 
     <body>
     
-
-        <div class="navbar navbar-inverse">
+          <nav class="navbar navbar-inverse" role="navigation">
+                    @Html.Action("Index")
+                </nav>
+        <!--<div class="navbar navbar-inverse">
             <div class="container">
                 <div class="navbar-header">
                     <a class="navbar-brand" href="#" title="change in _bootstrapLayout.basic.cshtml">Kafel</a>
                 </div>
-                <div class="navbar-collapse collapse">
-            
+              
+             
+                  
                     <ul class="nav navbar-nav" role="navigation">
                         <li class="active"><a href="Donor">Donors</a></li>
                         <li><a href="Case">Cases</a></li>
@@ -59,11 +62,11 @@
                             </ul>
                         </li>
                     </ul>
-                  
-                </div>
+                 
+                
             </div>
         </div>
-    
+    -->
 
         <div class="container">
             <div class="row">
