--- a/Kafala.Web.UI/Views/Shared/_Layout.cshtml
+++ b/Kafala.Web.UI/Views/Shared/_Layout.cshtml
@@ -16,57 +16,20 @@
 
     <body>
     
-          <nav class="navbar navbar-inverse" role="navigation">
-                    @Html.Action("Index")
-                </nav>
-        <!--<div class="navbar navbar-inverse">
+        <div class="navbar navbar-inverse">
             <div class="container">
                 <div class="navbar-header">
                     <a class="navbar-brand" href="#" title="change in _bootstrapLayout.basic.cshtml">Kafel</a>
                 </div>
-              
-             
-                  
-                    <ul class="nav navbar-nav" role="navigation">
-                        <li class="active"><a href="Donor">Donors</a></li>
-                        <li><a href="Case">Cases</a></li>
-                        <li  class="dropdown">
-                            <a class="dropdown-toggle" href="#" id="dropPayment" data-toggle="dropdown" role="button"  >Payments
-                                <b class="caret"></b>
-                            </a>
-                            <ul class="dropdown-menu" role="menu" aria-labelledby="dropPayment" >
-                                <li><a href="Payment/Search">Find</a></li>
-                                <li><a href="Payment/Register">Register</a></li>
-                                <li><a href="Payment/Edit">Edit</a></li>
-                            </ul>
-                             
-                        </li>
-                        <li class="dropdown"><a 
-                                                 class="dropdown-toggle" href="#" id="dropReports" data-toggle="dropdown" role="button"
-                                                 >Reports<b class="caret"></b></a>
-                            <ul class="dropdown-menu" role="menu" aria-labelledby="dropReports" >
-                                <li><a href="Reports/UnpaidCommitments">Unpaid Commitments</a></li>
-                                <li><a href="Reports/CollectedVolume">Collected Volume</a></li>
-                             
-                            </ul>
-                        </li>
-                        <li><a href="Reminders">Reminders</a></li>
-                        <li class="dropdown">
-                            <a 
-                                class="dropdown-toggle" href="#" id="dropAdmin" data-toggle="dropdown" role="button"
-                                >Administration<b class="caret"></b></a>
-                            <ul class="dropdown-menu" role="menu" aria-labelledby="dropAdmin">
-                                <li><a href="Users">Manage Users</a></li>
-                                <li><a href="System">System Settings</a></li>
-                             
-                            </ul>
-                        </li>
-                    </ul>
+            <div class="navbar-collapse collapse" style="height: 1px;">
+                 @Html.Action("Index", "Menu")
+        </div>
+            
                  
                 
             </div>
         </div>
-    -->
+    
 
         <div class="container">
             <div class="row">
