--- a/Kafala.Web.UI/Views/Donor/View.cshtml
+++ b/Kafala.Web.UI/Views/Donor/View.cshtml
@@ -1,4 +1,5 @@
-﻿@model Kafala.Web.ViewModels.Donor.ViewDonorViewModel
+﻿@using Foundation.Web
+@model Kafala.Web.ViewModels.Donor.ViewDonorViewModel
 
 <div class="page-header">
     <h1>Name @Model.Name</h1>
