--- a/Kafala.Web.UI/Views/Donor/Partial/DonorCommitments.cshtml
+++ b/Kafala.Web.UI/Views/Donor/Partial/DonorCommitments.cshtml
@@ -18,8 +18,8 @@
                  <td>@item.StartDate</td>
                  <td>@item.EndDate</td>
                  <td>
-                     @Html.ActionLink("Edit", "Edit", new {id = item.Id}) |
-                     @Html.ActionLink("Details", "Details", new {id = item.Id}) |
+                     @Html.ActionLink("Edit", "Edit", "Commitment", new {id = item.Id} , null) |
+                     @Html.ActionLink("Details", "Details", "Commitment", new {id = item.Id}, null) |
                      @Html.ActionLink("Delete", "Delete", new {id = item.Id})
                  </td>
              </tr>
