--- a/Kafala.Web.UI/Views/Payment/Index.cshtml
+++ b/Kafala.Web.UI/Views/Payment/Index.cshtml
@@ -18,16 +18,16 @@
         {
             <tr>
                 <td>
-                    @Html.DisplayFor(modelItem => item.DonationCaseName)
+                    @Html.DisplayFor(modelItem => item.CommitmentDonationCaseName)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.DonorName)
+                    @Html.DisplayFor(modelItem => item.CommitmentDonorName)
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.PaymentDate)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.PaymentPeriod)
+                    @Html.DisplayFor(modelItem => item.PaymentPeriodName)
                 </td>
                 <td>
                     @Html.ActionLink("Edit", "Edit", new {id = item.Id}) |
