--- a/Kafala.Web.UI/Views/Commitment/Index.cshtml
+++ b/Kafala.Web.UI/Views/Commitment/Index.cshtml
@@ -1,17 +1,33 @@
-﻿@model Kafala.Web.ViewModels.Commitment.CommitmentIndexViewModel
+﻿@using Foundation.Web.Extensions
+@model Kafala.Web.ViewModels.Commitment.CommitmentIndexViewModel
 
 <h2>List Commitments</h2>
 
     <p>
         @Html.ActionLink("Create New", "Create")
     </p>
-    <table>
+    <table class="table sorter">
         <tr>
-            <th>Test</th>
+           @Html.SortableHeader(Model.PagingInfo.Sort, "DonationCaseName" , "Donation Case" , Model.PagingInfo.ActionFunc)
+            @Html.SortableHeader(Model.PagingInfo.Sort, "Name" , "Donor" , Model.PagingInfo.ActionFunc)
+            @Html.SortableHeader(Model.PagingInfo.Sort, "Start Date" , "Start Date" , Model.PagingInfo.ActionFunc)
+            @Html.SortableHeader(Model.PagingInfo.Sort, "End Date" , "End Date" , Model.PagingInfo.ActionFunc)
         </tr>
     
     @foreach (var item in Model.Commitments) {
         <tr>
+            <td>
+                @item.DonationCaseName
+            </td>
+            <td>
+                @item.DonorName
+            </td>
+            <td>
+                @item.StartDate
+            </td>
+            <td>
+                @item.EndDate
+            </td>
             <td>
                 @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
                 @Html.ActionLink("Details", "Details", new { id=item.Id }) |
@@ -21,3 +37,4 @@
     }
     
     </table>
+@Html.PageLinks(Model.PagingInfo, Model.PagingInfo.ActionFunc)
