--- a/Kafala.Web.UI/Views/DonationCase/Index.cshtml
+++ b/Kafala.Web.UI/Views/DonationCase/Index.cshtml
@@ -45,6 +45,9 @@
             @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
             @Html.ActionLink("Details", "Details", new { id=item.Id }) |
             @Html.ActionLink("Delete", "Delete", new { id=item.Id })
+            @Ajax.ActionLink()
+            
+            .
         </td>
     </tr>
 }
@@ -69,3 +72,4 @@
 
     
 </table>
+@Html.PageLinks(Model.PagingInfo, Model.PagingInfo.ActionFunc)
