--- a/Kafala.Web.UI/Views/Donor/View.cshtml
+++ b/Kafala.Web.UI/Views/Donor/View.cshtml
@@ -1,5 +1,4 @@
-﻿@using Foundation.Web
-@model Kafala.Web.ViewModels.Donor.ViewDonorViewModel
+﻿@model Kafala.Web.ViewModels.Donor.ViewDonorViewModel
 
 <div class="page-header">
     <h1>@Model.Name</h1>
