More testing and fixes

--- a/Kafala.Web.UI/Views/Commitment/View.cshtml
+++ b/Kafala.Web.UI/Views/Commitment/View.cshtml
@@ -6,3 +6,11 @@
 {
     @Html.FormBuilder().DynamicView()
 }
+
+ <div class="row">
+            
+            @if (Model.Payments != null)
+            {
+                @Html.Partial("Partial/Payment", Model, new ViewDataDictionary())
+            }
+        </div>
