--- a/Kafala.Web.UI/Views/DonationCase/View.cshtml
+++ b/Kafala.Web.UI/Views/DonationCase/View.cshtml
@@ -7,3 +7,10 @@
    
 }
 
+ <div class="row">
+            
+            @if (Model.Commitments != null)
+            {
+                @Html.Partial("Partial/Commitments", Model, new ViewDataDictionary())
+            }
+        </div>
