--- a/Kafala.Web.UI/Views/Donor/Index.cshtml
+++ b/Kafala.Web.UI/Views/Donor/Index.cshtml
@@ -1,4 +1,5 @@
 ﻿@using Kafala.Web.ViewModels.Donor;
+@using BootstrapNamedColor = VortexSoft.Bootstrap.BootstrapNamedColor
 @model DonorIndexViewModel
 
 @{
