--- a/Kafala.Web.UI/Views/Donor/Partial/DonorCommitments.cshtml
+++ b/Kafala.Web.UI/Views/Donor/Partial/DonorCommitments.cshtml
@@ -13,16 +13,7 @@
   
          @foreach (var item in Model.Commitments)
          {
-             <tr>
-                 <td>@item.DonationCaseName</td>
-                 <td>@item.StartDate</td>
-                 <td>@item.EndDate</td>
-                 <td>
-                     @Html.ActionLink("Edit", "Edit", "Commitment", new {id = item.Id} , null) |
-                     @Html.ActionLink("Details", "Details", "Commitment", new {id = item.Id}, null) |
-                     @Html.ActionLink("Delete", "Delete", new {id = item.Id})
-                 </td>
-             </tr>
+             Html.RenderPartial("Partials/CommitmentListing", item);
          }
 
      </table>
